# video-editor

./: .gitignore  DEPLOYMENT_README.md  README.md  pyproject.toml
analysis/: pyproject.toml
src/video_editor_mcp/: generate_charts.py  generate_opentimeline.py  search_local_videos.py  server.py  utils.py
src/video_jungle_mcp/: server.py
tools/: edit.sh  pyproject.toml
tools/src/manim/: run_manim.py
tools/src/viewer/: progress  progress.swift
video-player/: build-downloader.sh  downloader.swift  open-window  player.swift  vj-player
