[project]
name = "video-jungle-mcp"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.0.0",
 "videojungle>=0.1.25",
]
[[project.authors]]
name = "Kirk Kaiser"
email = "kirk@zothcorp.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
video-jungle-mcp = "video_jungle_mcp:main"
